Update Auto Enhance button text

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
                     <div class="control-group" style="border-bottom: none;">
                         <button id="auto-enhance-button" class="upload-label" style="width: 100%; margin-bottom: 10px; background: linear-gradient(135deg, var(--color-accent), var(--color-accent-hover)); font-weight: 600;">
-                            ✨ Auto Enhance (Smart)
+                            Auto Enhance
                         </button>
                         <button id="ai-enhance-button" class="upload-label" style="width: 100%; margin-bottom: 10px;">
                             AI Enhance (Manual)
