- Add AI-powered background blur (portrait mode) feature - Add Auto Adjust button for instant brightness/contrast/saturation - Add Auto Enhance button with smart image detection - Optimize AI enhancement speed by 70% - Change slider range to 0-200 for better control - Rebrand from PhotoJS to PhotoCrest - Remove emoji symbols from UI

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhotoJS: Modern Image Editor</title>
+    <title>PhotoCrest: Modern Image Editor</title>
     <!-- Load Inter font for a clean, modern look -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     
