Update branding from Image Editor to PhotoCrest

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Editor - Professional Photo Editing</title>
+    <title>PhotoCrest - Professional Photo Editor</title>
     <!-- Load Inter font for a clean, modern look -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     
@@ -514,7 +514,7 @@
     <div class="editor-layout">
         <!-- Sidebar Controls -->
         <div class="sidebar">
-            <div class="header">IMAGE EDITOR</div>
+            <div class="header">PHOTOCREST</div>
             
             <div class="upload-wrapper">
                 <input type="file" id="image-upload" accept="image/*">
