--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             background-color: var(--color-bg-primary);
             border-bottom: 1px solid var(--color-border);
             text-align: left;
-            font-weight: 700;
-            font-size: 1.1rem;
+            font-weight: 800;
+            font-size: 1.2rem;
             letter-spacing: 3px;
             text-transform: uppercase;
             color: var(--color-text-light);
@@ -121,8 +121,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-weight: 600;
-            font-size: 0.75rem;
+            font-weight: 700;
+            font-size: 0.85rem;
             transition: all 0.3s ease;
             color: var(--color-text-dim);
             text-transform: uppercase;
@@ -182,10 +182,10 @@
 
         label {
             display: block;
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             color: var(--color-text-dim);
             margin-bottom: 10px;
-            font-weight: 500;
+            font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
@@ -255,8 +255,8 @@
         .value-display {
             min-width: 50px;
             text-align: right;
-            font-size: 0.8rem;
-            font-weight: 600;
+            font-size: 0.9rem;
+            font-weight: 700;
             color: var(--color-accent);
             font-variant-numeric: tabular-nums;
         }
@@ -277,11 +277,11 @@
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-            font-size: 0.75rem;
+            font-size: 0.8rem;
             flex-grow: 1;
             min-width: 75px;
             text-align: center;
-            font-weight: 500;
+            font-weight: 600;
             letter-spacing: 0.3px;
             position: relative;
             overflow: hidden;
@@ -336,8 +336,8 @@
             padding: 14px 28px;
             border-radius: 8px;
             cursor: pointer;
-            font-weight: 600;
-            font-size: 0.85rem;
+            font-weight: 700;
+            font-size: 0.9rem;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             box-shadow: 0 4px 16px rgba(201, 169, 97, 0.3);
             letter-spacing: 0.5px;
@@ -381,8 +381,8 @@
             color: var(--color-text-dim);
             border: 1px solid #2a2a2a;
             border-radius: 6px;
-            font-weight: 500;
-            font-size: 0.75rem;
+            font-weight: 600;
+            font-size: 0.8rem;
             cursor: pointer;
             margin-top: 16px;
             transition: all 0.3s ease;
@@ -690,7 +690,7 @@
 
             <!-- Download Button -->
             <div style="padding: 24px 20px; border-top: 1px solid var(--color-border); background-color: var(--color-bg-secondary);">
-                <button id="download-button" class="upload-label" style="width: 100%;">Download Edited Image</button>
+                <button id="download-button" class="upload-label" style="width: 100%;">Download</button>
             </div>
             
         </div>
