--- a/index.html
+++ b/index.html
@@ -896,7 +896,10 @@
                 </div>
             </div>
 
-            <!-- Download and Delete Buttons -->`n            <div style="padding: 24px 20px; border-top: 1px solid var(--color-border); background-color: var(--color-bg-secondary);">`n                <button id="download-button" class="upload-label" style="width: 100%; margin-bottom: 12px;">Download</button>`n                <button id="delete-image-button" class="style-button" style="width: 100%; background: #e53935; border-color: #e53935; color: white; padding: 14px 28px; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 0.5px;"> Delete Image</button>
+            <!-- Download and Delete Buttons -->
+            <div style="padding: 24px 20px; border-top: 1px solid var(--color-border); background-color: var(--color-bg-secondary);">
+                <button id="download-button" class="upload-label" style="width: 100%; margin-bottom: 12px;">Download</button>
+                <button id="delete-image-button" class="style-button" style="width: 100%; background: #e53935; border-color: #e53935; color: white; padding: 14px 28px; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 0.5px;"> Delete Image</button>
             </div>
             
         </div>
@@ -2156,6 +2159,7 @@
             // File and Reset listeners
             document.getElementById('image-upload').addEventListener('change', handleImageUpload);
             document.getElementById('download-button').addEventListener('click', downloadImage);
+            document.getElementById('delete-image-button').addEventListener('click', clearImage);
             document.getElementById('reset-button').addEventListener('click', () => {
                 resetAdjustments();
                 historyManager.saveState('reset_all');
