Add Delete Image button and update download filename  - Added red Delete Image button (🗑️) below Download button - Implemented clearImage() function to reset editor to initial state - Changed download filename from PhotoJS to PhotoCrest with timestamp - Download format: PhotoCrest_YYYY-MM-DDTHH-MM-SS.png - Button styled with red background (#e53935) for clear visual distinction

--- a/index.html
+++ b/index.html
@@ -1686,7 +1686,8 @@
 
             // 5. Create a download link
             const link = document.createElement('a');
-            link.download = 'PhotoJS_Edited_Image.png';
+            const timestamp = new Date().toISOString().replace(/[:.]/g, '-').slice(0, -5);
+            link.download = `PhotoCrest_${timestamp}.png`;
             link.href = renderCanvas.toDataURL('image/png');
             link.click();
         }
