Fix: Server crash on large images + add global error handler  Server Changes: - Reduced max image size to 1500x1500 (was 2000x2000) - Added global error handler to catch all exceptions - Always returns JSON for API endpoints - Better error logging  Frontend Changes: - Reduced max dimension to 1500px (was 3000px) - Auto-resizes large images before sending to server - Matches server capacity to prevent crashes  Result: No more empty responses, server won't crash on large images

--- a/index.html
+++ b/index.html
@@ -2070,7 +2070,7 @@
                 let width = mainEditorImage.naturalWidth;
                 let height = mainEditorImage.naturalHeight;
                 
-                const maxDimension = 3000;
+                const maxDimension = 1500;  // Reduced to prevent server crashes
                 if (width > maxDimension || height > maxDimension) {
                     const scale = maxDimension / Math.max(width, height);
                     width = Math.floor(width * scale);
