UI: Remove emojis from buttons and clean up labels  - Removed emojis from Quick Enhancement buttons - Removed "(Manual)" label from AI Enhance button - Cleaner, more professional appearance

--- a/index.html
+++ b/index.html
@@ -794,13 +794,13 @@
                         <div class="button-group" id="quick-enhance-buttons" style="display: flex; flex-direction: column; gap: 10px;">
                             <!-- Enhanced Quick Enhancement Buttons - Larger and More Prominent -->
                             <button class="style-button" data-enhance="sharpen" style="width: 100%; padding: 14px 20px; font-size: 0.9rem; font-weight: 600;">
-                                ✨ Sharpen / Detail
+                                Sharpen / Detail
                             </button>
                             <button class="style-button" data-enhance="vibrant" style="width: 100%; padding: 14px 20px; font-size: 0.9rem; font-weight: 600;">
-                                🎨 Vibrant Pop
+                                Vibrant Pop
                             </button>
                             <button class="style-button" data-enhance="clarity" title="Click for quick clarity, double-click for advanced clarity" style="width: 100%; padding: 14px 20px; font-size: 0.9rem; font-weight: 600;">
-                                💎 Clarity
+                                Clarity
                             </button>
                         </div>
                         <div style="font-size: 0.7rem; color: var(--color-text-dimmer); margin-top: 8px; opacity: 0.8;">
@@ -880,7 +880,7 @@
                             Auto Enhance
                         </button>
                         <button id="ai-enhance-button" class="upload-label" style="width: 100%; margin-bottom: 10px;">
-                            AI Enhance (Manual)
+                            AI Enhance
                         </button>
                         <div id="enhancement-status" style="display: none; text-align: center; color: var(--color-accent); font-size: 0.9rem; margin-top: 10px;">
                             <div class="spinner" style="display: inline-block; width: 16px; height: 16px; border: 2px solid var(--color-accent); border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite;"></div>
